--- a/templates/search.html
+++ b/templates/search.html
@@ -32,7 +32,9 @@
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='include/rs-plugin/css/revolution.addon.revealer.css') }}">
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='include/rs-plugin/css/addons/revolution.addon.revealer.preloaders.css') }}">
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='include/rs-plugin/css/addons/revolution.addon.particles.css') }}">
-
+	
+	<!-- Search CSS -->
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style-houston.css') }}">
 
 	<!-- Document Title
 	============================================= -->
@@ -98,9 +100,9 @@
 					<!-- Logo
 					============================================= -->
 					<div id="logo">
-						<a href="/" class="standard-logo"><img src="{{ url_for('static', filename='img/logo.png') }}"
+						<a href="/" class="standard-logo"><images src="{{ url_for('static', filename='image/logo.png') }}"
 								alt="Logo"></a>
-						<a href="/" class="retina-logo"><img src="{{ url_for('static', filename='img/logo@2x.png') }}"
+						<a href="/" class="retina-logo"><images src="{{ url_for('static', filename='images/logo@2x.png') }}"
 								alt="Logo"></a>
 					</div><!-- #logo end -->
 
@@ -137,7 +139,7 @@
 					<ul>	<!-- SLIDE  -->
 						<li class="dark" data-index="rs-243" data-transition="fadethroughdark" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="default" data-easeout="default" data-masterspeed="default"  data-thumb="include/rs-plugin/demos/assets/images/buyout.jpg"  data-rotate="0"  data-saveperformance="off"  data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
 							<!-- MAIN IMAGE -->
-							<img src="{{ url_for('static', filename='include/rs-plugin/demos/assets/images/dummy.png') }}"  alt=""  data-lazyload="{{ url_for('static', filename='include/rs-plugin/demos/assets/images/buyout.jpg') }}" data-bgposition="center center" data-kenburns="on" data-duration="4000" data-ease="Power3.easeInOut" data-scalestart="150" data-scaleend="100" data-rotatestart="0" data-rotateend="0" data-blurstart="0" data-blurend="0" data-offsetstart="0 0" data-offsetend="0 0" data-bgparallax="4" class="rev-slidebg" data-no-retina>
+							<img src="{{ url_for('static', filename='include/rs-plugin/demos/assets/images/dummy.png') }}"  alt=""  data-lazyload="{{ url_for('static', filename='images/buyout-blue.jpg') }}" data-bgposition="center center" data-kenburns="on" data-duration="4000" data-ease="Power3.easeInOut" data-scalestart="150" data-scaleend="100" data-rotatestart="0" data-rotateend="0" data-blurstart="0" data-blurend="0" data-offsetstart="0 0" data-offsetend="0 0" data-bgparallax="4" class="rev-slidebg" data-no-retina>
 							<!-- LAYERS -->
 
 							<!-- LAYER NR. 1 -->
@@ -272,6 +274,13 @@
 			<div class="content-wrap">
 
 				<div class="container clearfix">
+					
+					<div id="map-container" position="center">  
+
+    				<!-- map div -->
+         			<div id="map" align="center"></div>
+						
+      				</div>
 
 				</div>
 
@@ -339,6 +348,13 @@
 <script src="{{ url_for('static', filename='include/rs-plugin/js/extensions/revolution.extension.parallax.min.js') }}"></script>
 <script src="{{ url_for('static', filename='include/rs-plugin/js/extensions/revolution.extension.slideanims.min.js') }}"></script>
 <script src="{{ url_for('static', filename='include/rs-plugin/js/extensions/revolution.extension.video.min.js') }}"></script>
+
+<!-- KEY -->
+<script src="{{ url_for('static', filename='js/config.js') }}"></script>
+      
+<!-- HOUSTON MAP JS  -->
+<script src="{{ url_for('static', filename='js/houstonmap.js') }}"></script>
+
 
 <!-- ADD-ONS JS FILES -->   
 <script>
