--- a/templates/houston.html
+++ b/templates/houston.html
@@ -144,7 +144,7 @@
 					<ul>	<!-- SLIDE  -->
 						<li class="dark" data-index="rs-243" data-transition="fadethroughdark" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="default" data-easeout="default" data-masterspeed="default"  data-thumb="include/rs-plugin/demos/assets/images/buyout.jpg"  data-rotate="0"  data-saveperformance="off"  data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
 							<!-- MAIN IMAGE -->
-							<img src="{{ url_for('static', filename='include/rs-plugin/demos/assets/images/dummy.png') }}"  alt=""  data-lazyload="{{ url_for('static', filename='include/rs-plugin/demos/assets/images/buyout.jpg') }}" data-bgposition="center center" data-kenburns="on" data-duration="4000" data-ease="Power3.easeInOut" data-scalestart="150" data-scaleend="100" data-rotatestart="0" data-rotateend="0" data-blurstart="0" data-blurend="0" data-offsetstart="0 0" data-offsetend="0 0" data-bgparallax="4" class="rev-slidebg" data-no-retina>
+							<img src="{{ url_for('static', filename='include/rs-plugin/demos/assets/images/dummy.png') }}"  alt=""  data-lazyload="{{ url_for('static', filename='include/rs-plugin/demos/assets/images/buyout-blue.jpg') }}" data-bgposition="center center" data-kenburns="on" data-duration="4000" data-ease="Power3.easeInOut" data-scalestart="150" data-scaleend="100" data-rotatestart="0" data-rotateend="0" data-blurstart="0" data-blurend="0" data-offsetstart="0 0" data-offsetend="0 0" data-bgparallax="4" class="rev-slidebg" data-no-retina>
 							<!-- LAYERS -->
 
 							<!-- LAYER NR. 1 -->
@@ -191,7 +191,7 @@
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[0,0,0,0]"
 
-								style="z-index: 6; min-width: 800px; max-width: 800px; white-space: normal; font-size: 80px; line-height: 80px; font-weight: 600; color: #ffffff; letter-spacing: -5px;font-family:Montserrat;"> Home &nbsp;Buyouts </div>
+								style="z-index: 6; min-width: 800px; max-width: 800px; white-space: normal; font-size: 80px; line-height: 80px; font-weight: 600; color: #ffffff; letter-spacing: -5px;font-family:Montserrat;"> Listing Search </div>
 
 							<!-- LAYER NR. 3 -->
 							<div class="tp-caption  "
@@ -215,7 +215,7 @@
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[0,0,0,0]"
 
-								style="z-index: 7; min-width: 640px; max-width: 640px; white-space: normal; font-size: 20px; line-height: 30px; font-weight: 400; color: rgba(255,255,255,0.75); letter-spacing: px;font-family:Montserrat;">Early &nbsp;Property &nbsp;Listings </div>
+								style="z-index: 7; min-width: 640px; max-width: 640px; white-space: normal; font-size: 20px; line-height: 30px; font-weight: 400; color: rgba(255,255,255,0.75); letter-spacing: px;font-family:Montserrat;"></div>
 
 							<!-- LAYER NR. 4 -->
 							<a class="tp-caption rev-btn   tc-btnshadow tp-rs-menulink"
@@ -287,13 +287,8 @@
 						
       				</div>
 					
-    <!-- API key -->
-    <script type="text/javascript" src="../static/js/config.js"></script>
-      
-    <script type="text/javascript" src="../static/js/houstonmap.js"></script>
-
 				</div>
-
+				
 			</div>
 
 		</section><!-- #content end -->
