--- a/templates/search.html
+++ b/templates/search.html
@@ -33,6 +33,11 @@
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='include/rs-plugin/css/addons/revolution.addon.revealer.preloaders.css') }}">
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='include/rs-plugin/css/addons/revolution.addon.particles.css') }}">
 	
+	<!-- Leaflet CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css"
+    integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
+    crossorigin=""/>
+	
 	<!-- Search CSS -->
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style-houston.css') }}">
 
@@ -100,9 +105,9 @@
 					<!-- Logo
 					============================================= -->
 					<div id="logo">
-						<a href="/" class="standard-logo"><images src="{{ url_for('static', filename='image/logo.png') }}"
+						<a href="/" class="standard-logo"><img src="{{ url_for('static', filename='images/logo.png') }}"
 								alt="Logo"></a>
-						<a href="/" class="retina-logo"><images src="{{ url_for('static', filename='images/logo@2x.png') }}"
+						<a href="/" class="retina-logo"><img src="{{ url_for('static', filename='images/logo@2x.png') }}"
 								alt="Logo"></a>
 					</div><!-- #logo end -->
 
@@ -139,7 +144,7 @@
 					<ul>	<!-- SLIDE  -->
 						<li class="dark" data-index="rs-243" data-transition="fadethroughdark" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="default" data-easeout="default" data-masterspeed="default"  data-thumb="include/rs-plugin/demos/assets/images/buyout.jpg"  data-rotate="0"  data-saveperformance="off"  data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
 							<!-- MAIN IMAGE -->
-							<img src="{{ url_for('static', filename='include/rs-plugin/demos/assets/images/dummy.png') }}"  alt=""  data-lazyload="{{ url_for('static', filename='images/buyout-blue.jpg') }}" data-bgposition="center center" data-kenburns="on" data-duration="4000" data-ease="Power3.easeInOut" data-scalestart="150" data-scaleend="100" data-rotatestart="0" data-rotateend="0" data-blurstart="0" data-blurend="0" data-offsetstart="0 0" data-offsetend="0 0" data-bgparallax="4" class="rev-slidebg" data-no-retina>
+							<img src="{{ url_for('static', filename='include/rs-plugin/demos/assets/images/dummy.png') }}"  alt=""  data-lazyload="{{ url_for('static', filename='include/rs-plugin/demos/assets/images/buyout.jpg') }}" data-bgposition="center center" data-kenburns="on" data-duration="4000" data-ease="Power3.easeInOut" data-scalestart="150" data-scaleend="100" data-rotatestart="0" data-rotateend="0" data-blurstart="0" data-blurend="0" data-offsetstart="0 0" data-offsetend="0 0" data-bgparallax="4" class="rev-slidebg" data-no-retina>
 							<!-- LAYERS -->
 
 							<!-- LAYER NR. 1 -->
@@ -210,7 +215,7 @@
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[0,0,0,0]"
 
-								style="z-index: 7; min-width: 640px; max-width: 640px; white-space: normal; font-size: 20px; line-height: 30px; font-weight: 400; color: rgba(255,255,255,0.75); letter-spacing: px;font-family:Montserrat;"></div>
+								style="z-index: 7; min-width: 640px; max-width: 640px; white-space: normal; font-size: 20px; line-height: 30px; font-weight: 400; color: rgba(255,255,255,0.75); letter-spacing: px;font-family:Montserrat;">Early &nbsp;Property &nbsp;Listings </div>
 
 							<!-- LAYER NR. 4 -->
 							<a class="tp-caption rev-btn   tc-btnshadow tp-rs-menulink"
@@ -234,7 +239,7 @@
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[50,50,20,20]"
 
-								style="z-index: 8; min-width: 280px; max-width: 280px; white-space: nowrap; font-size: 17px; line-height: 60px; font-weight: 400; color: rgba(255,255,255,1); letter-spacing: px;font-family:Montserrat;background-color:rgb(0,109,210);border-radius:30px 30px 30px 30px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;"><i class="icon-cube" style="font-size:17px;margin-right:5px;"></i> Search &nbsp;Listings </a>
+								style="z-index: 8; min-width: 280px; max-width: 280px; white-space: nowrap; font-size: 17px; line-height: 60px; font-weight: 400; color: rgba(255,255,255,1); letter-spacing: px;font-family:Montserrat;background-color:rgb(0,109,210);border-radius:30px 30px 30px 30px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;"><i class="icon-cube" style="font-size:17px;margin-right:5px;"></i> Listing &nbsp;Search </a>
 
 							<!-- LAYER NR. 5 -->
 							<a class="tp-caption rev-btn   tc-btnshadow"
@@ -280,13 +285,12 @@
     				<!-- map div -->
          			<div id="map" align="center"></div>
 						
-				<!-- Key -->
-    				<script type="text/javascript" src="../static/js/config.js"></script>
+      				</div>
+					
+    <!-- API key -->
+    <script type="text/javascript" src="../static/js/config.js"></script>
       
-				<!-- Houston JS -->
-    				<script type="text/javascript" src="../static/js/houstonmap.js"></script>
-						
-      				</div>	
+    <script type="text/javascript" src="../static/js/houstonmap.js"></script>
 
 				</div>
 
@@ -354,13 +358,20 @@
 <script src="{{ url_for('static', filename='include/rs-plugin/js/extensions/revolution.extension.parallax.min.js') }}"></script>
 <script src="{{ url_for('static', filename='include/rs-plugin/js/extensions/revolution.extension.slideanims.min.js') }}"></script>
 <script src="{{ url_for('static', filename='include/rs-plugin/js/extensions/revolution.extension.video.min.js') }}"></script>
-
-<!-- KEY 
+	
+<!-- Leaflet JS -->
+<script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"
+integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
+crossorigin=""></script>
+	
+<!-- d3 JS -->
+<script src="https://d3js.org/d3.v4.min.js"></script>
+	
+<!-- KEY -->
 <script src="{{ url_for('static', filename='js/config.js') }}"></script>
       
-HOUSTON MAP JS 
-<script src="{{ url_for('static', filename='js/houstonmap.js') }}"></script> -->
-
+<!-- HOUSTON MAP JS  -->
+<script src="{{ url_for('static', filename='js/houstonmap.js') }}"></script>
 
 <!-- ADD-ONS JS FILES -->   
 <script>
@@ -662,4 +673,5 @@ HOUSTON MAP JS
 </script>
 
 </body>
+</html>
 </html>
