--- a/templates/analyticsBU.html
+++ b/templates/analyticsBU.html
@@ -8,7 +8,9 @@
 
 	<!-- Stylesheets
 	============================================= -->
-	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,700|Raleway:300,400,500,600,700|Crete+Round:400i"/>
+	<link
+	href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,700|Raleway:300,400,500,600,700|Crete+Round:400i"
+	rel="stylesheet" type="text/css" />
 
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.css') }}">
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
@@ -30,31 +32,50 @@
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='include/rs-plugin/css/revolution.addon.revealer.css') }}">
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='include/rs-plugin/css/addons/revolution.addon.revealer.preloaders.css') }}">
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='include/rs-plugin/css/addons/revolution.addon.particles.css') }}">
-	
-	<!-- CHARTS CSS -->
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles2.css') }}">
+
 
 	<!-- Document Title
 	============================================= -->
-	<title>Charts - Line Chart Basic | Canvas</title>
+	<title>Home Buyout Program</title>
 
-<style>
-.chart-samples ul { list-style: none; }
+	<style>
 
-.chart-samples h4 {
-	text-transform: uppercase;
-	margin-bottom: 20px;
-	font-weight: 400;
-}
+		.demos-filter {
+			margin: 0;
+			text-align: right;
+		}
 
-.chart-samples li {
-	font-size: 16px;
-	line-height: 2.2;
-	font-weight: 600;
-}
+		.demos-filter li {
+			list-style: none;
+			margin: 10px 0px;
+		}
 
-.chart-samples li a:not(:hover) { color: #AAA; }
-</style>
+		.demos-filter li a {
+			display: block;
+			border: 0;
+			text-transform: uppercase;
+			letter-spacing: 1px;
+			color: #444;
+		}
+
+		.demos-filter li a:hover,
+		.demos-filter li.activeFilter a { color: #1ABC9C; }
+
+		@media (max-width: 991px) {
+			.demos-filter { text-align: center; }
+
+			.demos-filter li {
+				float: left;
+				width: 33.3%;
+				padding: 0 20px;
+			}
+		}
+
+		@media (max-width: 767px) { .demos-filter li { width: 50%; } }
+
+		#welcome_wrapper .tp-loader.spinner2{ background-color: #006dd2 !important; }video::-webkit-media-controls-start-playback-button{display:none !important}.tc-gradient i:before{background:-webkit-linear-gradient(left,#5e05b1 0%,#09ceff 100%);-webkit-background-clip:text;-webkit-text-fill-color:transparent}.tc-btnshadow{-webkit-box-shadow:3px 5px 10px 0px rgba(0,0,0,0.2) !important;-moz-box-shadow:3px 5px 10px 0px rgba(0,0,0,0.2) !important;box-shadow:3px 5px 10px 0px rgba(0,0,0,0.2) !important}#welcome .uranus.tparrows{width:50px; height:50px; background:rgba(255,255,255,0)}#welcome .uranus.tparrows:before{width:50px; height:50px; line-height:50px; font-size:40px; transition:all 0.3s;-webkit-transition:all 0.3s}#welcome .uranus.tparrows:hover:before{opacity:0.75}
+
+	</style>
 
 </head>
 
@@ -64,7 +85,7 @@
 	============================================= -->
 	<div id="wrapper" class="clearfix">
 
-				<!-- Header
+		<!-- Header
 		============================================= -->
 		<header id="header" class="split-menu">
 
@@ -77,9 +98,9 @@
 					<!-- Logo
 					============================================= -->
 					<div id="logo">
-						<a href="/" class="standard-logo"><img src="{{ url_for('static', filename='images/logo.png') }}"
+						<a href="/" class="standard-logo"><img src="{{ url_for('static', filename='img/logo.png') }}"
 								alt="Logo"></a>
-						<a href="/" class="retina-logo"><img src="{{ url_for('static', filename='images/logo@2x.png') }}"
+						<a href="/" class="retina-logo"><img src="{{ url_for('static', filename='img/logo@2x.png') }}"
 								alt="Logo"></a>
 					</div><!-- #logo end -->
 
@@ -88,12 +109,12 @@
 					<nav id="primary-menu" class="style">
 						<ul>
 							<li><a href="/"><div>Home</div></a></li>
-							<li><a href="#"><div>Search</div></a></li>
+							<li><a href="search"><div>Search</div></a></li>
 							<li><a href="alerts"><div>Alerts</div></a></li>
 						</ul>
 
 						<ul>
-							<li><a href="analytics"><div>Analytics</div></a></li>
+							<li><a href="#"><div>Analytics</div></a></li>
 							<li><a href="faqs"><div>FAQs</div></a></li>
 							<li><a href="about"><div>About</div></a></li>
 						</ul>
@@ -104,7 +125,7 @@
 
 			</div>
 
-		</header><!-- #header end -->           
+		</header><!-- #header end -->                    
 
 		<!-- Slider
 		============================================= -->  
@@ -116,7 +137,7 @@
 					<ul>	<!-- SLIDE  -->
 						<li class="dark" data-index="rs-243" data-transition="fadethroughdark" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="default" data-easeout="default" data-masterspeed="default"  data-thumb="include/rs-plugin/demos/assets/images/buyout.jpg"  data-rotate="0"  data-saveperformance="off"  data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
 							<!-- MAIN IMAGE -->
-							<img src="{{ url_for('static', filename='include/rs-plugin/demos/assets/images/dummy.png') }}"  alt=""  data-lazyload="{{ url_for('static', filename='images/buyout-blue.jpg') }}" data-bgposition="center center" data-kenburns="on" data-duration="4000" data-ease="Power3.easeInOut" data-scalestart="150" data-scaleend="100" data-rotatestart="0" data-rotateend="0" data-blurstart="0" data-blurend="0" data-offsetstart="0 0" data-offsetend="0 0" data-bgparallax="4" class="rev-slidebg" data-no-retina>
+							<img src="{{ url_for('static', filename='include/rs-plugin/demos/assets/images/dummy.png') }}"  alt=""  data-lazyload="{{ url_for('static', filename='include/rs-plugin/demos/assets/images/buyout.jpg') }}" data-bgposition="center center" data-kenburns="on" data-duration="4000" data-ease="Power3.easeInOut" data-scalestart="150" data-scaleend="100" data-rotatestart="0" data-rotateend="0" data-blurstart="0" data-blurend="0" data-offsetstart="0 0" data-offsetend="0 0" data-bgparallax="4" class="rev-slidebg" data-no-retina>
 							<!-- LAYERS -->
 
 							<!-- LAYER NR. 1 -->
@@ -163,7 +184,7 @@
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[0,0,0,0]"
 
-								style="z-index: 6; min-width: 800px; max-width: 800px; white-space: normal; font-size: 80px; line-height: 80px; font-weight: 600; color: #ffffff; letter-spacing: -5px;font-family:Montserrat;"> Listing Search </div>
+								style="z-index: 6; min-width: 800px; max-width: 800px; white-space: normal; font-size: 80px; line-height: 80px; font-weight: 600; color: #ffffff; letter-spacing: -5px;font-family:Montserrat;"> Home &nbsp;Buyouts </div>
 
 							<!-- LAYER NR. 3 -->
 							<div class="tp-caption  "
@@ -187,7 +208,7 @@
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[0,0,0,0]"
 
-								style="z-index: 7; min-width: 640px; max-width: 640px; white-space: normal; font-size: 20px; line-height: 30px; font-weight: 400; color: rgba(255,255,255,0.75); letter-spacing: px;font-family:Montserrat;"></div>
+								style="z-index: 7; min-width: 640px; max-width: 640px; white-space: normal; font-size: 20px; line-height: 30px; font-weight: 400; color: rgba(255,255,255,0.75); letter-spacing: px;font-family:Montserrat;">Early &nbsp;Property &nbsp;Listings </div>
 
 							<!-- LAYER NR. 4 -->
 							<a class="tp-caption rev-btn   tc-btnshadow tp-rs-menulink"
@@ -237,7 +258,7 @@
 
 								style="z-index: 9; min-width: 280px; max-width: 280px; white-space: nowrap; font-size: 17px; line-height: 60px; font-weight: 400; color: rgba(255,255,255,1); letter-spacing: px;font-family:Montserrat;background-color:rgb(0,109,210);border-radius:30px 30px 30px 30px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;"><i class="icon-cloud-download" style="font-size:17px;margin-right:5px;"></i> Analytics &nbsp;Data </a>
 						</li>
-					  					  </ul>
+					  </ul>
 					<div class="tp-bannertimer tp-bottom" style="visibility: hidden !important;"></div>
 				</div>
 			</div><!-- END REVOLUTION SLIDER -->
@@ -251,27 +272,6 @@
 			<div class="content-wrap">
 
 				<div class="container clearfix">
-					
-					<!-- Charts Area
-					============================================= -->
-					<div id="chartswrapper">
-        			<h1>Analytics Dashboard</h1>
-
-        			<h2>Total Number of Homes for Sale by Neighbohood</h2>
-        			<canvas id="hbar-chart" width="500" height="250"></canvas>
-
-        			<hr>
-        			<hr>
-
-        			<h2>Total Buyout Amount per Neighbohood of Available Listings</h2>
-        			<canvas id="bar-chart" width="500" height="250"></canvas>
-        
-        			<hr>
-        			<hr>
-
-        			<h2>Number of Homes based on Days on the Market</h2>
-        			<canvas id="linechart" width="500" height="250"></canvas>
-    				</div>
 
 				</div>
 
@@ -340,13 +340,8 @@
 <script src="{{ url_for('static', filename='include/rs-plugin/js/extensions/revolution.extension.slideanims.min.js') }}"></script>
 <script src="{{ url_for('static', filename='include/rs-plugin/js/extensions/revolution.extension.video.min.js') }}"></script>
 	
-<!-- Leaflet JS -->
-<script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"
-integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
-crossorigin=""></script>
-	
-<!-- D3 JS -->
-<script src="https://d3js.org/d3.v5.min.js"></script>
+<!-- CHART JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.3.0/Chart.min.js"></script>
 
 <!-- ADD-ONS JS FILES -->   
 <script>
@@ -640,8 +635,11 @@ crossorigin=""></script>
 			window.location.reload();
 		});
 	}
+		/*
+		RsParticlesAddOn(revapi109);
 
-	});
+		RsRevealerAddOn(tpj, revapi109, "<div class='rsaddon-revealer-spinner rsaddon-revealer-spinner-1'><div class='rsaddon-revealer-1'><span style='background: {{color}}'><\/span><span style='background: {{color}}'><\/span><span style='background: {{color}}'><\/span><span style='background: {{color}}'><\/span><span style='background: {{color}}'><\/span><span style='background: {{color}}'><\/span><span style='background: {{color}}'><\/span><span style='background: {{color}}'><\/span><span style='background: {{color}}'><\/span><span style='background: {{color}}'><\/span><\/div><\/div \/>");*/
+	});	/*ready*/
 </script>
 
 </body>
