--- a/templates/charts.html
+++ b/templates/charts.html
@@ -32,7 +32,7 @@
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='include/rs-plugin/css/addons/revolution.addon.particles.css') }}">
 	
 	<!-- CHARTS CSS -->
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles2.css') }}">
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style2.css') }}">
 
 	<!-- Document Title
 	============================================= -->
