--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -98,13 +98,13 @@
 					<!-- Logo
 					============================================= -->
 					<div id="logo">
-						<a href="/" class="standard-logo"><img src="{{ url_for('static', filename='img/logo.png') }}"
+						<a href="/" class="standard-logo"><img src="{{ url_for('static', filename='images/logo.png') }}"
 								alt="Logo"></a>
-						<a href="/" class="retina-logo"><img src="{{ url_for('static', filename='img/logo@2x.png') }}"
+						<a href="/" class="retina-logo"><img src="{{ url_for('static', filename='images/logo@2x.png') }}"
 								alt="Logo"></a>
 					</div><!-- #logo end -->
 
-					<!-- Primary Navigation
+				<!-- Primary Navigation
 					============================================= -->
 					<nav id="primary-menu" class="style">
 						<ul>
@@ -114,9 +114,9 @@
 						</ul>
 
 						<ul>
-							<li><a href="#"><div>Analytics</div></a></li>
+							<li><a href="analytics"><div>Analytics</div></a></li>
 							<li><a href="faqs"><div>FAQs</div></a></li>
-							<li><a href="about"><div>About</div></a></li>
+							<li><a href=""><div>About</div></a></li>
 						</ul>
 
 					</nav><!-- #primary-menu end -->
@@ -135,9 +135,9 @@
 				<!-- START REVOLUTION SLIDER 5.4.6 fullscreen mode -->
 				<div id="welcome" class="rev_slider fullscreenbanner" style="display:none;" data-version="5.4.6">
 					<ul>	<!-- SLIDE  -->
-						<li class="dark" data-index="rs-243" data-transition="fadethroughdark" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="default" data-easeout="default" data-masterspeed="default"  data-thumb="include/rs-plugin/demos/assets/images/buyout.jpg"  data-rotate="0"  data-saveperformance="off"  data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
+						<li class="dark" data-index="rs-243" data-transition="" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="default" data-easeout="default" data-masterspeed="default"  data-thumb=""  data-rotate="0"  data-saveperformance="off"  data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
 							<!-- MAIN IMAGE -->
-							<img src="{{ url_for('static', filename='include/rs-plugin/demos/assets/images/dummy.png') }}"  alt=""  data-lazyload="{{ url_for('static', filename='include/rs-plugin/demos/assets/images/buyout.jpg') }}" data-bgposition="center center" data-kenburns="on" data-duration="4000" data-ease="Power3.easeInOut" data-scalestart="150" data-scaleend="100" data-rotatestart="0" data-rotateend="0" data-blurstart="0" data-blurend="0" data-offsetstart="0 0" data-offsetend="0 0" data-bgparallax="4" class="rev-slidebg" data-no-retina>
+							<img src="{{ url_for('static', filename='include/rs-plugin/demos/assets/images/dummy.png') }}"  alt=""  data-lazyload="{{ url_for('static', filename='images/buyout-blue2.jpg') }}" data-bgposition="center center" data-kenburns="on" data-duration="4000" data-ease="Power3.easeInOut" data-scalestart="150" data-scaleend="100" data-rotatestart="0" data-rotateend="0" data-blurstart="0" data-blurend="0" data-offsetstart="0 0" data-offsetend="0 0" data-bgparallax="4" class="rev-slidebg" data-no-retina>
 							<!-- LAYERS -->
 
 							<!-- LAYER NR. 1 -->
@@ -184,7 +184,7 @@
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[0,0,0,0]"
 
-								style="z-index: 6; min-width: 800px; max-width: 800px; white-space: normal; font-size: 80px; line-height: 80px; font-weight: 600; color: #ffffff; letter-spacing: -5px;font-family:Montserrat;"> Home &nbsp;Buyouts </div>
+								style="z-index: 6; min-width: 800px; max-width: 800px; white-space: normal; font-size: 80px; line-height: 80px; font-weight: 600; color: #ffffff; letter-spacing: -5px;font-family:Montserrat;"> About </div>
 
 							<!-- LAYER NR. 3 -->
 							<div class="tp-caption  "
@@ -208,7 +208,7 @@
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[0,0,0,0]"
 
-								style="z-index: 7; min-width: 640px; max-width: 640px; white-space: normal; font-size: 20px; line-height: 30px; font-weight: 400; color: rgba(255,255,255,0.75); letter-spacing: px;font-family:Montserrat;">Early &nbsp;Property &nbsp;Listings </div>
+								style="z-index: 7; min-width: 640px; max-width: 640px; white-space: normal; font-size: 20px; line-height: 30px; font-weight: 400; color: rgba(255,255,255,0.75); letter-spacing: px;font-family:Montserrat;"></div>
 
 							<!-- LAYER NR. 4 -->
 							<a class="tp-caption rev-btn   tc-btnshadow tp-rs-menulink"
@@ -272,7 +272,10 @@
 			<div class="content-wrap">
 
 				<div class="container clearfix">
-
+					
+				<p align="center"><iframe src="https://county-flood-control.herokuapp.com/analytics" width=1200 height=2135
+										  00 style="text-align: center"></iframe></p>
+					
 				</div>
 
 			</div>
@@ -282,7 +285,7 @@
 		<!-- Footer
 		============================================= -->
 		<footer id="footer" class="dark">
-
+		
 			<div class="container">
 
 				<!-- Footer Widgets
