--- a/templates/alerts.html
+++ b/templates/alerts.html
@@ -323,11 +323,12 @@
 
 									<div class="clear"></div>
 
-
 									<div class="col_full hidden">
 										<input type="text" id="template-contactform-botcheck" name="template-contactform-botcheck" value=""
 											class="sm-form-control" />
 									</div>
+									
+									<div class="clear"></div>
 
 									<div class="col_full">
 										<button class="button button-3d nomargin" type="submit" id="template-contactform-submit"
